fix(UsernameList): align btns correctly when there is validation msg

--- a/frontend/src/components/UsernameList/style.scss
+++ b/frontend/src/components/UsernameList/style.scss
@@ -19,8 +19,6 @@
       }
 
       &-buttons {
-        @include m.center-vertically;
-        
         &-btn {
           margin-right: v.$margin-small;
         }
